2004-06-24  Oyvind Harboe  <oyvind.harboe@zylin.com>

	* Added cyg_memalloc_alloc_fail() fn which is invoked before 
	return NULL from failed allocations. Useful breakpoint site.
	Andrew Lunn wrote some of the code and pointed out various
	wrinkles to be ironed out.

2004-02-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/kapi.h: Add throw specifications throughout.
	* src/kapi.cxx: Ditto.

2003-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/dlmalloc.cxx (Cyg_Mempool_dlmalloc_Implementation): Fixed
	compiler warning added by previous patch.

2003-09-30  Eric Doenges <Eric.Doengea@DynaPel.com>

	* cdl/memalloc.cdl, src/dlmalloc.cxx: Make the minimum memory
	alignment a configuration option for Doug Lea's memory allocator.

2003-02-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/memjoin.inl: Don't use default arg in definition.

2003-02-04  John Dallaway  <jld@ecoscentric.com>

	* src/heapgen.tcl: Accommodate POSIX-style arguments
	under Cygwin.

2003-01-29  John Dallaway  <jld@ecoscentric.com>

	* src/heapgen.tcl: Accommodate latest Cygwin Tcl shell
	(tclsh83.exe)

2002-05-10  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/heaptest.c (test_pat): Make failure messages clearer.
	(cyg_start): Output what failures mean.

2002-04-24  Yoshinori Sato  <qzb04471@nifty.ne.jp>

	* src/memfixed.cxx (resize_alloc): Don't set default args in func
	definition.

2002-01-30  Bart Veer  <bartv@redhat.com>

	* tests/malloc4.cxx:
	Never call realloc() with a new size of 0, which frees the buffer.
	Fix the volatility of ptr.p

2002-01-23  Jesper Skov  <jskov@redhat.com>

	* tests/malloc4.cxx (myrand): Fix overflow.

2002-01-15  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/malloc4.cxx (myrand): Fix so that it really treats the limit
	as a limit.

2001-10-17  Jesper Skov  <jskov@redhat.com>

	* include/sepmetaimpl.inl: CYGINT_ISO_STRING_MEMFUNCS checks
	changed to ifdef.

2001-10-11  Jesper Skov  <jskov@redhat.com>
